<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/drawer_history"
            android:icon="@drawable/ic_history_drawer"
            android:title="@string/history" />
               <item
            android:id="@+id/drawer_info"
            android:icon="@drawable/ic_drawer_info"
            android:title="@string/room_info" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/bottom_menu">
        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    </group>

</menu>