<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.settings.SettingsFragment">

    <TextView
       android:elevation="@dimen/app_elevation"
        android:background="@color/white"
        android:padding="@dimen/big_padding"
        android:id="@+id/settings_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_change_name_btn"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_name" />

    <EditText
       android:inputType="textPersonName"
        android:id="@+id/settings_edit_name_edit_text"
        style="@style/input_text_style"
        android:focusable="true"
        android:hint="@string/enter_your_name"
        android:maxLength="30"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_name" />

    <TextView
        android:id="@+id/settings_btn_continue"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/continue_it"
        android:textSize="@dimen/normal_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_edit_name_edit_text" />

    <TextView
        android:id="@+id/change_language"
        style="@style/btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Сменить язык"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_change_name_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>