<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBottomSheetBackground"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_arrow"
    >

    <ImageView
        android:id="@+id/bottom_sheet_btn_arrow"

        android:layout_width="@dimen/bottom_sheet_arrow"
        android:layout_height="@dimen/bottom_sheet_arrow"
        android:rotation="270"
        android:src="@drawable/ic_double_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:clickable="true"
        android:background="@drawable/bottom_sheet_btn_ripple"
        android:id="@+id/bottom_sheet_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_btn_arrow"
        tools:ignore="UseCompoundDrawables"
        android:focusable="true">


        <ImageView
            style="@style/bottom_sheet_btn_style"
            android:src="@drawable/ic_history_bottom"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/bottom_sheet_text_style"
            android:text="@string/bottom_sheet_history"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_get_quest"
        style="@style/bottom_sheet_linear_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_history"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            style="@style/bottom_sheet_btn_style"
            android:src="@drawable/ic_get_quest"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/bottom_sheet_text_style"
            android:text="@string/bottom_sheet_take_quest"
            android:textSize="@dimen/normal_text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_sheet_settings"
        style="@style/bottom_sheet_linear_layout_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_get_quest"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            style="@style/bottom_sheet_btn_style"
            android:src="@drawable/ic_settings"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/bottom_sheet_text_style"
            android:text="@string/settings"
            android:textSize="@dimen/normal_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_help"
        style="@style/bottom_sheet_linear_layout_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_settings"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            style="@style/bottom_sheet_btn_style"
            android:src="@drawable/ic_help"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/bottom_sheet_text_style"
            android:text="@string/help"
            android:textSize="@dimen/normal_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>